monolith-to-microservices/infrastructure/apps/monolith/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydjangoapp1
spec:
  selector:
    matchLabels:
      app: mydjangoapp1
  template:
    metadata:
      labels:
        app: mydjangoapp1
    spec:
      containers:
        - name: mydjangoapp1
          image: fixedcroissant/vigilanteureka_django_test:v.0.0.5
          #Resources might not be necessary.
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            #Where the app starts, in this case, line 8000
            - containerPort: 8000
---
# -- second application -- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydjangoapp2-coc
spec:
  selector:
    matchLabels:
      app: mydjangoapp2-coc
  template:
    metadata:
      labels:
        app: mydjangoapp2-coc
    spec:
      containers:
        - name: mydjangoapp2-coc
          image: fixedcroissant/containerofcats:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            # coc running on port 80
            - containerPort: 80
---
# -- third application -- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel1-app
spec:
  selector:
    matchLabels:
      app: laravel1-app
  template:
    metadata:
      labels:
        app: laravel1-app
    spec:
      containers:
        - name: laravel1-app
          image: fixedcroissant/laravel-test:v1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
