monolith-to-microservices/infrastructure/apps/monolith/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydjangoapp1
  namespace: myapp2
spec:
  type: ClusterIP
  selector:
    app: mydjangoapp1 #internal only.
  ports:
    - port: 8091
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mydjangoapp2-coc
spec:
  selector:
    app: mydjangoapp2-coc
  ports:
    - port: 8092
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mylaravelapp1
spec:
  selector:
    app: mylaravelapp1
  ports:
    - port: 8093
      targetPort: 8000
