monolith-to-microservices/infrastructure/apps/monolith/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydjangoapp1-ingress
  namespace: myapp2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  #CoC
  rules:
    - host: mydjangoapp1.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mydjangoapp2-coc
                port:
                  number: 8092
    # Second App Location.
    # Basic App Number 2
    - host: mydjangoapp2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                #service name - may need to adjust
                #todo: service-name-needs-to-be-updated
                name: mydjangoapp1
                port:
                  number: 8091
    # Third App Location. PHP
    - host: mylaravelapp1.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel1-app
                port:
                  number: 8093
